wegas-app/src/main/webapp/wegas-pmg/css/wegas-pmg.css
/* ... */
.yui3-skin-sam .wegas-inbox .yui3-tab-label > div:before {
    content:"";
    display:block;
    position:absolute;
    top:0px;
    left:0px;
    width:48px;
    height:48px;
    margin:4px 8px;
    background-size:100%;
}
.yui3-skin-sam .wegas-inbox .yui3-tab-label > div.read:before {
    background-image:URL("../../wegas-pmg/images/letter_open.png");
}
.yui3-skin-sam .wegas-inbox .yui3-tab-label > div.unread:before {
    background-image:URL("../../wegas-pmg/images/letter_close.png");
}

.history-page b{
    font-weight:500;
}

.history-page b:first-child{
    display:block;
    position:relative;
    width:100%;
    height:32px;
    padding: 8px 0px;
    margin: 12px 0px 12px 0px;
    box-sizing:border-box;
    border-bottom:solid 1px grey;
}

.history-page .wegas-inbox .yui3-tab-label > div{
    padding-left:10px;
}

.history-page .wegas-inbox .yui3-tab-label > div:before{
    display:none;
}

/*----------------------------------Datatable---------------------------------*/
.gantt-execution-page .yui3-datatable, .gantt-planning-page .yui3-datatable{
    padding:28px 32px 0px 32px;
}

.task-execution-page .yui3-datatable, .task-planning-page .yui3-datatable{
    padding:28px 32px;
}
.gantt-execution-page .pmg-legend, .gantt-planning-page .pmg-legend{
    padding:14px 32px 28px 32px;
}

.yui3-datatable-cell.onclickpopup{
    text-decoration:none;
}

.task-execution-page .yui3-datatable-data tr, .task-planning-page .yui3-datatable-data tr{
    height:64px;
}

.pmg--body .yui3-datatable table{
    width:100%;
    border: none;
    font-size: 0.9em;
}
.pmg--body .yui3-datatable-columns th{
    background: none;
    color: #52a39d;
    border-bottom: 2px solid #52a39d;
    /*background-repeat: repeat-x;*/
}
.pmg--body .yui3-datatable-columns th.right div {
    text-align: right;
}

.pmg--body .yui3-datatable-cell,
.pmg--body .yui3-datatable-header{
    border-left:none;
}

td.yui3-datatable-col-Realised:after {
    content: " %";
}

.task-planning-page .yui3-datatable-odd:hover, .task-planning-page .yui3-datatable-even:hover,
.task-execution-page .yui3-datatable-odd:hover, .task-execution-page .yui3-datatable-even:hover{
    background:#f1f1f1;
}

.pmg--body .yui3-datatable-odd .yui3-datatable-cell,
.pmg--body .yui3-datatable-even .yui3-datatable-cell{
    background: none;
    height: 40px;
    padding: 0 25px 0 10px;
}
.yui3-skin-sam .yui3-datatable-data .yui3-datatable-even .yui3-datatable-sorted,
.yui3-skin-sam .yui3-datatable-data .yui3-datatable-odd .yui3-datatable-sorted  {
    background-color: #f1f1f1;
}
.pmg--body .yui3-datatable-cell{
    border-color: lightgray;
    border-bottom:1px solid lightgray;
}

/*---------------------------- schedulecolumn -------------------------------- */
.yui3-datatable-table th.schedulecolumn {
    text-align: center;
    width: 3.4em;
    padding-left: 0;
    padding-right: 0;
}
.yui3-datatable-table .yui3-datatable-data .schedulecolumn {
    padding: 0 0 0 0;
}

.resources-page, .inbox-page{
    padding:32px 24px;
}

/*----------------------------------SlidePanel----------------------------*/
.resources-page .slidepanel-title {
    height:48px;
    line-height:48px;
    width:100%; 
}

/*---------------------------- project-page & evm-page ---------------------------------*/
.project-page, .evm-page{
    display: block;
    position:relative;
    width: 100%;
    height: 100%;
    padding: 0px 24px 24px 24px;
    box-sizing: border-box;
    margin: 0px;
    border: none;
}

.project-page .pmg-project-overview {
    position: relative;
    clear: both;
    float: none;
    width: 100%;
}

.project-page .charts-column {
    width: 100%;
}

.project-page .charts-column .chart {
    width: 50%;
    float:left;
    box-sizing:border-box;
}
.project-page .indicators-management{
    padding-right:24px;
}
.project-page .indicators-quality{
    padding-left:24px;
}
.evm-page .slidepanel-title,
.project-page .pmg-overview-title, 
.project-page .indicators-management .slidepanel-title, 
.project-page .indicators-quality .slidepanel-title{
    width:100%;
    margin:16px 0px;
}

.evm-page .slidepanel-title h2,
.project-page .pmg-overview-title h2, .project-page .indicators-management .slidepanel-title h2, .project-page .indicators-quality .slidepanel-title h2{
    width:100%;
    color:#52a39c;
    border-bottom:solid 2px #52a39c;
    margin:0px;
    padding:0px;
    height: 24px;
    font-size:16px;
}
.pmg-project-execution-overview{
    width:100%;
}

.pmg-project-overview .pmg-project-overview-content{
    display:block;
    position:relative;
    width:32%;
    height:122px;
    background:#d8d9dd;
    margin:0px;
    padding:0px;
    border:none;
    margin-right:2%;
    float:left;
}
.pmg-project-overview .pmg-project-details-content{
    display:block;
    position:relative;
    width:19%;
    height:122px;
    background:#d8d9dd;
    margin:0px;
    padding:0px;
    border:none;
    margin-right:1.25%;
    float:left;
}

.pmg-project-overview .pmg-project-details-content:last-child{
    margin:0px;
}

.pmg-project-overview-content .label, .pmg-project-details-content .label{
    display:block;
    position:relative;
    width:100%;
    height:32px;
    background-color:#7b818f;
    font-size:12px;
    padding:8px;
    box-sizing:border-box;
    color:white;
}

.pmg-project-overview-content .variableValue, .pmg-project-details-content .variableValue{
    display:block;
    position:relative;
    width:100%;
    height:90px;
    padding:24px 0px;
    font-size:21px;
    text-align:center;
    color:#96979c;
    box-sizing:border-box;
}

.pmg-project-overview-content .variablePercent{
    display:block;
    position:absolute;
    width:100%;
    height:32px;
    bottom:0px;
    left:0px;
    padding:0px;
    font-size:12px;
    text-align:center;
    color:#96979c;
    box-sizing:border-box;
}

.pmg-project-overview-content .variableValue input{
  width: 84%;
  border: none;
}
/* ... */

